# inference_task_api

./: README.md  compose.yaml  pyproject.toml
services/api/: main.py  test_service.py
services/api/models/: task.py  tast_status.py
services/api/routers/: internal.py  protected.py
services/api/services/: store.py
services/worker/: Dockerfile  main.py
