[project]
name = "inference-task-api"
version = "0.1.0"
description = "Example api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "openapi>=2.0.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
]
